aligned grid and fixed duplacte shapes

--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
+  height: 100vh;
 }
 .grid-container {
-  /*   width: 750px;
-  height: 750px; */
-  /* min-width: 0px; */
+  width: 80%;
+  max-width: 750px;
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-  margin: 40px 5px;
+  margin: 40px auto;
   padding: 5px;
   aspect-ratio: 1;
 }
@@ -39,13 +39,11 @@ body {
   border-bottom: 8px solid black;
 }
 .circle {
-  /* display: none; */
   filter: invert(59%) sepia(20%) saturate(6500%) hue-rotate(179deg)
     brightness(101%) contrast(104%);
   height: 100%;
 }
 .cross {
-  /* display: none; */
   filter: invert(44%) sepia(73%) saturate(5281%) hue-rotate(353deg)
     brightness(101%) contrast(90%);
   height: 100%;
@@ -59,7 +57,7 @@ body {
   margin: 20px;
 }
 .radio-buttons input {
-  /* display: none; */
+  display: none;
 }
 .radio-buttons img {
   cursor: pointer;
